fixed footer for home page (can be replicated for other places) and a little alignment adjustment at home page.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,3 +7,7 @@ em {
 	padding:0; 
 	margin:0;
 }
+
+.footer {
+	font-size: 12px;
+}
